k8s/spark/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: spark-namespace
  labels:
    app: spark-app
    component: master
spec:
  ports:
  - port: 7077
    targetPort: 7077
    protocol: TCP
    name: spark-master
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: spark-webui
  selector:
    app: spark-app
    component: master
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker
  namespace: spark-namespace
  labels:
    app: spark-app
    component: worker
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: spark-worker-webui
  selector:
    app: spark-app
    component: worker
  type: ClusterIP
